themes/nihilo/form/Button.css
/*****
		dijit.form.Button
		dijit.form.DropDownButton
		dijit.form.ComboButton
		dijit.form.ComboBox (partial)
 *****/

.nihilo .dijitButtonNode {
	/* enabled state - inner */
	/* border:1px outset #a0a0a0; */
	border:1px solid #dedede;
	border-bottom:1px solid #dedede;
	border-right:1px solid #dedede;
	padding: 0.2em;
	background:#fff url("../images/buttonEnabled.png") repeat-x top left;
}
.dj_ie .nihilo .dijitButtonNode {
	zoom: 1;
}

.nihilo .dijitButtonText {
	padding: 0 0.3em;
}

.nihilo .dijitComboBox .dijitButtonNode {
	border-width: 0px 0px 0px 1px;
}

.nihilo .dijitArrowButton {
	color: #111;
}

.nihilo .dijitComboButton .dijitDownArrowButton {
	padding-right:4px;
}

.nihilo .dijitButtonDisabled .dijitButtonNode,
.nihilo .dijitToggleButtonDisabled .dijitButtonNode,
.nihilo .dijitDropDownButtonDisabled .dijitButtonNode,
.nihilo .dijitComboButtonDisabled .dijitButtonNode,
.nihilo .dijitComboBoxDisabled,
.nihilo .dijitSpinnerDisabled,
.nihilo .dijitSpinnerDisabled .dijitButtonNode {
	/* disabled state - inner */
	border-color: #dedede;
	/*color:#b4b4b4;*/
	background:#fafafa url("../images/buttonDisabled.png") top repeat-x;
	opacity: 0.60; /* Safari, Opera and Mozilla */
}
.dj_ie .nihilo .dijitButtonDisabled .dijitButtonNode *,
.dj_ie .nihilo .dijitToggleButtonDisabled .dijitButtonNode *,
.dj_ie .nihilo .dijitDropDownButtonDisabled .dijitButtonNode *,
.dj_ie .nihilo .dijitComboButtonDisabled .dijitButtonNode *,
.dj_ie .nihilo .dijitSpinnerDisabled .dijitButtonNode * {
	filter: gray() alpha(opacity=50); /* IE */
}

.nihilo .dijitButtonHover .dijitButtonNode,
.nihilo .dijitToggleButtonHover .dijitButtonNode,
.nihilo .dijitDropDownButtonHover .dijitButtonNode,
.nihilo .dijitComboButtonHover .dijitButtonContents,
.nihilo .dijitComboButtonDownArrowHover .dijitDownArrowButton,
.nihilo .dijitComboBoxHover .dijitDownArrowButton,
.nihilo .dijitSpinnerUpArrowHover .dijitUpArrowButton,
.nihilo .dijitSpinnerDownArrowHover .dijitDownArrowButton {
	/* hover state - inner */
	/* TODO: change from Hover to Selected so that button is still highlighted while drop down is being used */
	color:#000;
	background:#fcfcfc url("../images/buttonHover.png") repeat-x top left;
}

.nihilo .dijitSpinnerUpArrowActive .dijitUpArrowButton,
.nihilo .dijitSpinnerDownArrowActive .dijitDownArrowButton,
.nihilo .dijitButtonActive .dijitButtonNode,
.nihilo .dijitToggleButtonActive .dijitButtonNode,
.nihilo .dijitDropDownButtonActive .dijitButtonNode,
.nihilo .dijitComboButtonActive .dijitButtonContents,
.nihilo .dijitDownArrowActive .dijitDownArrowButton,
.nihilo .dijitComboBoxActive .dijitDownArrowButton {
	/* active state - inner (for when you are pressing a normal button, or
	 * when a toggle button is in a depressed state
	 */
	border-color:#dedede;
	background: #f5f5f5 url("../images/buttonActive.png") top left repeat-x;
}


.nihilo .dijitArrowButtonInner {
	background:url("../images/spriteArrows.png") no-repeat left top;
	width: 11px;
	margin: 0 auto 0 auto;
}
.nihilo .dijitUpArrowButton .dijitArrowButtonInner { 
	background:url("../images/spriteArrows.png") no-repeat -22px top; 
	width: 11px;
	margin: 0 auto 2px auto;
}
.dj_ie6 .nihilo .dijitArrowButtonInner {
	background:url("../images/spriteArrows.gif") no-repeat left top;
	width: 11px;
}
.dj_ie6 .nihilo .dijitUpArrowButton .dijitArrowButtonInner {
	background:url("../images/spriteArrows.gif") no-repeat -22px top;
	width: 11px;
}

